<resources>
    <string name="app_name">MyQuarter</string>
    <string name="hotadapter_name">天气美美的，适合旅游</string>
    <string name="hotadapter_title">骑猪上高速</string>
    <string name="hotadapter_title_name">:不错</string>
    <string name="share">分享的标题</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_title">创作</string>
    <string name="back">取消</string>
    <string name="edit_talktitle">发表文章</string>
    <string name="edit_talkpublish">发表</string>
    <string name="talk_hint">请输入内容,禁止输入色情,暴力等违反国家法律的内容,违者将以封号处理!</string>
    <string name="pop_title">是否保存到草稿箱</string>
    <string name="pop_save">保存</string>
    <string name="pop_unsave">不保存</string>
    <string name="vedio_title">拍照</string>
    <string name="preview_save">存到本地</string>
    <string name="preview_title">预览</string>
    <string name="preview_lvjing">滤镜</string>
    <string name="preview_btnext">下一步</string>
    <string name="previewshare_bt_setfm">设置封面</string>
    <string name="previewshare_bt_fabu">发布</string>
    <string name="previewshare_edit">点击输入视频简介</string>
    <string name="talkshare_tv">发表成功,快分享给好友捧场吧~!</string>
    <string name="talkshare_qqshare">QQ好友</string>
    <string name="talkshare_kjshare">朋友圈</string>
    <string name="talkshare_friendshare">朋友圈</string>
    <string name="talkshare_wxshare">微信</string>
    <string name="talkshare_tosee">前去看看!!</string>
</resources>
