<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.menglucywhh.myquarter.view.activity.EditTalkActivity"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:background="#03A9F4"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/talk_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textColor="@color/backgroundColor"
            android:textSize="22sp"/>

        <TextView
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#fff"
            android:layout_centerInParent="true"
            android:text="@string/edit_talktitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/talk_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/edit_talkpublish"
            android:textColor="@color/backgroundColor"
            android:textSize="24sp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/talk_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/talk_hint"
        android:paddingTop="8dp"
        android:background="@color/backgroundColor"/>
    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/shangchuantu"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginTop="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="地点"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/sliding_xiangyoua" />
    </RelativeLayout>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

</LinearLayout>
