<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="50dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/image_01"
                android:src="@mipmap/ic_launcher"
                android:layout_width="60dp"
                android:layout_height="60dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:layout_height="60dp">
                <TextView
                    android:id="@+id/text_01"
                    android:textColor="#ed1515"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/text_03"
            android:padding="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            android:text="@string/hotadapter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:layout_height="180dp">
            <ImageView
                android:id="@+id/image_photos"
                android:background="@drawable/photos"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="80dp"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/raw_111"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp" />
                <ImageView
                    android:src="@drawable/raw_222"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp" />
                <ImageView
                    android:id="@+id/image_fenxiang"
                    android:src="@drawable/raw_333"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp" />
                <ImageView
                    android:src="@drawable/raw_444"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp" />


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_04"
                android:textColor="#2862c6"
                android:text="@string/hotadapter_title"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/hotadapter_title_name"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_05"
                android:textColor="#2862c6"
                android:text="@string/hotadapter_title"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/hotadapter_title_name"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:background="#999999"
            android:layout_height="1dp" />
    </LinearLayout>

</RelativeLayout>

