<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="50dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/image_01"
                android:src="@mipmap/ic_launcher"
                android:layout_width="60dp"
                android:layout_height="60dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:layout_height="60dp">
                <TextView
                    android:id="@+id/text_01"
                    android:textColor="#ed1515"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="60dp"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:visibility="invisible"
                    android:textSize="13sp"
                    android:textColor="#000"
                    android:text=" 屏蔽Ta"
                    android:id="@+id/item_pingbi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/pingbi" />

                <TextView
                    android:visibility="invisible"
                    android:textSize="13sp"
                    android:textColor="#000"
                    android:text="  举报"
                    android:drawableTop="@drawable/jubao"
                    android:id="@+id/item_jubao"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:visibility="invisible"
                    android:gravity="center_vertical"
                    android:textSize="13sp"
                    android:id="@+id/item_fuzhilianjie"
                    android:textColor="#000"
                    android:text="   链接"
                    android:drawableTop="@drawable/fuzhilianjie"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    />

                <ImageView
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/gengduo"
                    android:id="@+id/item_gengduo"
                    android:layout_marginRight="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="38dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/text_03"
            android:padding="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            android:text="@string/hotadapter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_height="200dp">
            <cn.jzvd.JZVideoPlayerStandard
                android:id="@+id/videoplayer"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/sc"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="1563"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    android:paddingTop="1dp"
                    android:paddingBottom="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/image_fenxiang"
                    android:src="@drawable/fx2"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="1563"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    android:paddingTop="1dp"
                    android:paddingBottom="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:src="@drawable/gz"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="1563"
                    android:textColor="#fff"
                    android:paddingTop="1dp"
                    android:paddingBottom="1dp"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:src="@drawable/ly"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:text="1563"
                    android:textColor="#fff"
                    android:paddingTop="1dp"
                    android:paddingBottom="1dp"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_04"
                android:textColor="#2862c6"
                android:text="@string/hotadapter_title"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/hotadapter_title_name"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_05"
                android:textColor="#2862c6"
                android:text="@string/hotadapter_title"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/hotadapter_title_name"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:background="#999999"
            android:layout_height="1dp" />
    </LinearLayout>

</RelativeLayout>

